fixed update api for user
